0.6.0 (currently working on)
- [#773] Change: Make our enableFields() wrapper use $GLOBALS['TSFE'] and a singleton cache
- [#1096] Fix: Wrong message in configcheck::hideFields()
- [#1097] Fix: Config check warning if sr_feuser_register is not installed
- [#1092] Feature: Add a field "target groups" to the seminar record
- [#1093] Fix: Problem with the description of speakers in the seminar single view
- [#3] Fix: Allow marker names to be the prefix of others
- [#905] Change: Hide the P for the error message if there are no errors in the FORMidable forms
- [#921] Change: Change all tautology '1's to '1=1' in DB queries to make this extension work with PostgreSQL
- [#458] Fix: Prevent registrations for mere topic records
- [#1007] Change: Recommend/suggest sr_feuser_register
- [#909] Change: Remove the old sr_feuser_register template
- [#900] Change: Suggest the onetimeaccount extension
- [#415] Change: Send "access denied" HTTP headers if access has been denied
- [#1059] Fix: Error with strrpos in the config check
- [#602] Change: In the SQL file, remove NOT NULL from all text and blob fields
- [#669, #802, #1050, #1061] Code cleanup
- [#712] Change: Remove the "needs registration" checkbox
- [#1025] Feature: Add a field "size of registration queue" to the BE and FE editing of events records
- [#1056] Fix: Teaser text not included in list view search
- [#923] Change: Calculate the vacancies and registration numbers on the fly
- [#1040] Fix: <br /> is displayed on the confirmation page after the selected method of payment
- [#1045] Fix: Use require_once instead of require in mod1/index.php
- [#1042] Fix: Another PHP error on the registration page
- [#1039] Fix: Error on register attendances
- [#936] Fix: Empty label tags for the "terms" and "terms_2" checkboxes
- [#1010] Change: Notification mails to organizers now use real labels instead of DB field names.
- [#1015] Fix: Registration page: Radiobuttons for the payment methods should be vertically arranged